--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
           <h1 class="carrousel-title">¿Tienes un problema técnico que no puedes resolver?</h1>
           <p class="carrousel-text">Somos SBA y te ayudaremos con tus problemas técnicos del hogar</p>
           <a href="#servicios"><button type="button" class="carrousel-button">Ver más</button></a>
-          
         </div>
     </section>
     <section class="nosotros" id="nosotros">
@@ -78,7 +77,7 @@
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
           laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
           voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a href=""><button type="button" class="nosotros-button">Ver más</button></a>
+        <a href="#nosotros"><button type="button" class="nosotros-button">Ver más</button></a>
       </div>
     </section>
     <section class="servicios" id="servicios">
@@ -126,7 +125,7 @@
     </section>
     <section class="contacto">
       <h1 class="contacto-title">¿Tienes alguna duda sobre nuestros servicios?</h1>
-      <button type="button" class="contacto-button">Contáctanos</button>
+      <a href="contacto.html"><button type="button" class="contacto-button">Contáctanos</button></a>
     </section>
     <section class="registro">
       <div class="registro-container">
