--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
           <div class="contactanos-icons">
             <i class="icon-twitter"></i>
             <i class="icon-facebook2"></i>
-            <i class="icon-instagram"></i>
+            <a target="_blank" href="https://www.instagram.com/romero_rivera2/"><i class="icon-instagram"></i></a>
           </div>
         </div>
         <div class="contactanos-form">
@@ -74,7 +74,7 @@
       <div class="footer-icons">
         <i class="icon-twitter"></i>
         <i class="icon-facebook2"></i>
-        <i class="icon-instagram"></i>
+        <a target="_blank" href="https://www.instagram.com/romero_rivera2/"><i class="icon-instagram"></i></a>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
