Final Landing Page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/master.css">
     <title>SBA</title>
   </head>
-  <body>
+  <body class="body">
     <section class="header" id="header">
       <div class="header-logo">
         <img src="assets/images/logo.png" alt="">
@@ -18,7 +18,7 @@
       <nav class="header-nav">
         <ol class="header-ol">
           <li><a href="#header">Inicio</a></li>
-          <li><a href="#nosotros">Nosotros</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
           <li><a href="#servicios">Servicios</a></li>
           <li><a href="#descargar">Descargar</a></li>
           <div class="header-line"></div>
@@ -31,27 +31,6 @@
         </ol>
       </nav>
     </section>
-    <section class="header fixed">
-      <div class="header-logo">
-        <img src="assets/images/logo.png" alt="">
-        <h1 class="fixed">SBA</h1>
-      </div>
-      <nav class="header-nav fixed">
-        <ol class="header-ol fixed">
-          <li><a class="fixed" href="#header">Inicio</a></li>
-          <li><a class="fixed" href="#nosotros">Nosotros</a></li>
-          <li><a class="fixed" href="#servicios">Servicios</a></li>
-          <li><a class="fixed" href="#descargar">Descargar</a></li>
-          <div class="header-line fixed"></div>
-          <li><a class="fixed" href="contacto.html">Contacto</a></li>
-          <!--<div class="header-line fixed"></div>
-          <li><a class="fixed" href="">Regístrate</a></li>
-          <li><a class="fixed" href="">Iniciar Sesión</a></li>
-          <-->
-          <li><i class=""></i></li>
-        </ol>
-      </nav>
-    </section>
     <section class="carrousel">
       <div class="carrousel-container">
           <div class="carrousel-logo">
@@ -60,7 +39,7 @@
           </div>
           <h1 class="carrousel-title">¿Tienes un problema técnico que no puedes resolver?</h1>
           <p class="carrousel-text">Somos SBA y te ayudaremos con tus problemas técnicos del hogar</p>
-          <a href="#servicios"><button type="button" class="carrousel-button">Ver más</button></a>
+          <a href="https://play.google.com/store" target="_blank"><button type="button" class="carrousel-button">¡Descárgalo ahora!</button></a>
         </div>
     </section>
     <section class="nosotros" id="nosotros">
@@ -69,56 +48,56 @@
         <h1 class="nosotros-title">Nosotros</h1>
         <div class="nosotros-line"></div>
         <p class="nosotros-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-          laboris nisi ut aliquip ex ea commodo consequat.</p>
+          Somos una empresa encargada de crear una comunidad de profesionales 
+          al servicio del hogar en el Perú. Si necesitas ayuda en 
+          algún problema del hogar, SBA, junto a sus trabajadores, están para 
+          ti.</p>
         <p class="nosotros-text-2">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <a href="#nosotros"><button type="button" class="nosotros-button">Ver más</button></a>
+          Entendemos tu preocupación; por ello, 
+          nuestros trabajadores están calificados y preparados para ayudarte cuando 
+          lo necesites en tu hogar, oficina o empresa. </p>
+        <a href="nosotros.html"><button type="button" class="nosotros-button">Ver más</button></a>
       </div>
     </section>
     <section class="servicios" id="servicios">
       <div class="servicios-container">
         <h1 class="servicios-title">Nuestros Servicios</h1>
         <div class="servicios-line"></div>
-        <p class="servicios-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore dolore magma aliquia. </p>
+        <p class="servicios-text">En SBA encontrarás el servicio que necesites. Contamos con una amplia variedad de servicios para tu hogar. </p>
         <div class="servicios-grid">
           <div class="servicios-item">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Gasfitería</h1>
-            <p class="grid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+            <p class="grid-text">Tenemos especialistas en filtraciones, desatoros, accesorios de inodoro y muchos más.</p>
           </div>
           <div class="servicios-grid-line"></div>
           <div class="servicios-item">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Electricidad</h1>
-            <p class="grid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>  
+            <p class="grid-text">Tenemos especialistas en instalaciones de luminarias, cortocircuitos, cableado eléctrico y mucho más.</p>  
           </div>
           <div class="servicios-grid-line"></div>
           <div class="servicios-item">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Instalaciones</h1>
-            <p class="grid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+            <p class="grid-text">Tenemos especialistas en Rack para TV, cuadros, repisas, espejos, armado de muebles y mucho más.</p>
           </div>
           <div class="servicios-item">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Pintura</h1>
-            <p class="grid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+            <p class="grid-text">Tenemos especialistas en pintado de interiores y exteriores, resanes, curación de salitre u hongos y mucho más.</p>
           </div>
           <div class="servicios-grid-line"></div>
           <div class="servicios-item">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Carpintería</h1>
-            <p class="grid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+            <p class="grid-text">Tenemos especialistas en fabricación y mantenimiento de muebles de melamine o madera, puertas y mucho más.</p>
           </div>
           <div class="servicios-grid-line"></div>
           <div class="servicios-item">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Albañilería</h1>
-            <p class="grid-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+            <p class="grid-text">Tenemos especialistas en con pisos, paredes, remodelaciones y mucho más.</p>
           </div>
         </div>
       </div>
@@ -130,17 +109,16 @@
     <section class="registro">
       <div class="registro-container">
         <h1 class="registro-title">Forma parte de nosotros</h1>
-        <p class="registro-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-          ut labore et dolore magna aliqua, ut enim ad minim veniam.
+        <p class="registro-text">SBA es una comunidad que busca personas que necesiten un servicio y trabajadores con ganas de crecer y salir adelante. ¡Forma parte de nuestra comunidad!
         </p>
         <div class="registro-data">
           <div class="registro-solicitar">
             <h3 class="registro-semititle">Solicitar Servicio</h3>
-            <button type="button" class="registro-button">Regístrate</button>
+            <button type="button" class="registro-button tecnico-buttonRegister">Regístrate</button>
           </div>
           <div class="registro-brindar">
             <h3 class="registro-semititle">Solicitar Servicio</h3>
-            <button type="button" class="registro-button">Regístrate</button>
+            <button type="button" class="registro-button cliente-buttonRegister">Regístrate</button>
           </div>
         </div>
       </div>
@@ -151,16 +129,26 @@
           <img class="logo-img" src="assets/images/logo.png" alt="">
           <h1 class="descargar-title">SBA</h1>
         </div>
-        <p class="descargar-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-          sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-        <button type="button" class="descargar-button">Descargar</button>
+        <p class="descargar-text">SBA siempre a tu alcance. Si necesitas de un servico, 
+          contacta con trabajadores calificados desde la palma de tu mano desde 
+          donde estés, estamos para atenderte cuando más nos necesitas. 
+          Si eres un técnico, ten a la mano las peticiones de las personas que 
+          necesiten servicios en ese momento. ¿Qué esperas? ¡Descarga nuestra 
+          aplicación!</p>
+        <a target="_blank" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjSo7vJlp_tAhUQTDABHewDDZ0QFjAAegQIARAD&url=https%3A%2F%2Fplay.google.com%2F&usg=AOvVaw17R4zYMafohnWwu5zSuX94"><button type="button" class="descargar-button">Descargar</button></a>
       </div>  
       <img class="descargar-img" src="assets/images/finalImage.png" alt="">
     </section>
+    <div class="establecimiento">
+      <form class="form-container">
+        <p class="establecimiento-text">Regístrate para enviarte un correo con la información para poder instalar nuestra app en tu teléfono:</p>
+        <input id="correo_tienda" class="first-input" type="text" placeholder="Correo electrónico *" name="email" required>
+        <div class="button-container">
+          <button type="button" class="btn btn-light register-button boton-registro-tienda">Registrarte</button>
+          <button class="establecimiento-back-text">Cancelar</button>  
+        </div>
+      </form>
+    </div>
     <footer class="footer">
       <p class="footer-text">Copyright 2020 SBA. All rights reserved</p>
       <div class="footer-icons">
