--- a/nosotros.html
+++ b/nosotros.html
@@ -18,11 +18,11 @@
       <nav class="header-nav">
         <ol class="header-ol">
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="index.html">Nosotros</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
           <li><a href="index.html">Servicios</a></li>
           <li><a href="index.html">Descargar</a></li>
           <div class="header-line"></div>
-          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
           <!--<div class="header-line"></div>
           <li><a href="#registrate">Regístrate</a></li>
           <li><a href="#iniciarSes">Iniciar Sesión</a></li>
@@ -31,42 +31,21 @@
         </ol>
       </nav>
     </section>
-    <section class="contactanos" id="contacto">
-        <div class="contactanos-datos">
-          <h1 class="contactanos-title">Contactos</h1>
-          <div class="contactanos-minicontainer">
-            <p class="contactanos-gray"><black class="contactanos-black" >Dirección: </black>Av. Gral. Salaverry 2255 San Isidro 15076</p>
-          </div>
-          <div class="contactanos-minicontainer">
-            <p class="contactanos-gray"><black class="contactanos-black" >Teléfono: </black>999 888 777</p>
-          </div>
-          <div class="contactanos-minicontainer">
-            <p class="contactanos-gray"><black class="contactanos-black" >Fax: </black>555.748.6051</p>
-          </div>
-          <div class="contactanos-minicontainer">
-            <p class="contactanos-gray"><black class="contactanos-black" >E-mail: </black>SBA@gmail.com</p>
-          </div>
-          <div class="contactanos-icons">
-            <i class="icon-twitter"></i>
-            <i class="icon-facebook2"></i>
-            <a target="_blank" href="https://www.instagram.com/romero_rivera2/"><i class="icon-instagram"></i></a>
-          </div>
+    <section class="misionVision" >
+        <div class="nosotros-element">
+            <h1 class="nosotros-text">Acerca de nosotros</h1>
+            <div class="nosotros-line-s"></div>
+            <p class="pnosotros">MINKA, que surge con la finalidad de cubrir las necesidades de las personas mediante el uso de la tecnología y comunicación móvil, es conformado por cinco integrantes, todos estudiantes de la carrera de ingeniería de Software: Dana Vallejos, Jesús Romero, José Hernández, Gabriel Vásquez y Emanuel Ticona.</p>
         </div>
-        <div class="contactanos-form">
-          <h1 class="contactanos-title">Envíanos un mensaje</h1>
-          <div class="contactanos-form-container">
-            <label class="first" for="name">Nombre</label>
-            <input type="text" name="name" id="">
-            <label for="email">E-mail</label>
-            <input type="text" name="email" id="">
-            <label for="compañia">Compañía</label>
-            <input type="text" name="compañia" id="">
-            <label for="asunto">Asunto</label>
-            <input type="text" name="asunto" id="">
-            <label for="mensaje">Mensaje</label>
-            <textarea class="mensaje-design" type="text" name="mensaje" id=""></textarea> 
-          </div>
-          <button type="button" class="contactanos-button">Enviar</button>
+        <div class="nosotros-element">
+            <h1 class="mis">Misión</h1>
+            <div class="nosotros-line-s line-bug"></div>
+            <p class="pmis">Ofrecer una propuesta innovadora mediante el uso de la tecnología brindando bienestar económico y mejorando la calidad de vida de las familias del Perú.</p>
+        </div>
+        <div class="nosotros-element">
+            <h1 class="vis">Visión</h1>
+            <div class="nosotros-line-s line-bug2"></div>
+            <p id="infografia" class="pvis">Ser la plataforma número uno en la contratación de técnicos especializados en servicios en casa en Sudamérica.</p>    
         </div>
       </section>
     <footer class="footer">
