--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body class="body">
     <section class="header" id="header">
       <div class="header-logo">
-        <img src="assets/images/logo.png" alt="">
+        <a href="index.html"><img src="assets/images/logo.png" alt=""></a>
         <h1>SBA</h1>
       </div>
       <nav class="header-nav">
@@ -27,9 +27,12 @@
           <li><a href="#registrate">Regístrate</a></li>
           <li><a href="#iniciarSes">Iniciar Sesión</a></li>
           <-->  
-          <li><i class=""></i></li>
+          <li class="La-mata" ><i></i></li>
         </ol>
       </nav>
+      <div class="menu-btn">
+        <div class="menu-btn__burger"></div>
+      </div>
     </section>
     <section class="carrousel">
       <div class="carrousel-container">
@@ -76,18 +79,18 @@
             <h1 class="grid-title">Electricidad</h1>
             <p class="grid-text">Tenemos especialistas en instalaciones de luminarias, cortocircuitos, cableado eléctrico y mucho más.</p>  
           </div>
-          <div class="servicios-grid-line"></div>
-          <div class="servicios-item">
+          <div class="servicios-grid-line se-ira"></div>
+          <div class="servicios-item se-ira">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Instalaciones</h1>
             <p class="grid-text">Tenemos especialistas en Rack para TV, cuadros, repisas, espejos, armado de muebles y mucho más.</p>
           </div>
-          <div class="servicios-item">
+          <div class="servicios-item se-ira">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Pintura</h1>
             <p class="grid-text">Tenemos especialistas en pintado de interiores y exteriores, resanes, curación de salitre u hongos y mucho más.</p>
           </div>
-          <div class="servicios-grid-line"></div>
+          <div class="servicios-grid-line se-ira"></div>
           <div class="servicios-item">
             <img src="assets/images/gasfiIcon.png" alt="">
             <h1 class="grid-title">Carpintería</h1>
