--- a/nosotros.html
+++ b/nosotros.html
@@ -12,7 +12,7 @@
   <body>
     <section class="header sticky otherNoIndex" id="header">
       <div class="header-logo">
-        <img src="assets/images/logo.png" alt="">
+        <a href="index.html"><img src="assets/images/logo.png" alt=""></a>
         <h1>SBA</h1>
       </div>
       <nav class="header-nav">
@@ -27,9 +27,12 @@
           <li><a href="#registrate">Regístrate</a></li>
           <li><a href="#iniciarSes">Iniciar Sesión</a></li>
           <-->  
-          <li><i class=""></i></li>
+          <li class="La-mata" ><i></i></li>
         </ol>
       </nav>
+      <div class="menu-btn">
+        <div class="menu-btn__burger"></div>
+      </div>
     </section>
     <section class="misionVision" >
         <div class="nosotros-element">
@@ -59,6 +62,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="script/script.js"></script>
+    <script src="script/script2.js"></script>
   </body>
 </html>
